# approach-viz

./: .gitignore  .prettierignore  .vercelignore  AGENTS.md  README.md  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: parser-tests.yml
app/: App.css  AppClient.tsx  actions.ts  app-client-utils.ts  layout.tsx  manifest.ts  page.tsx  route-page.tsx
app/[[...slug]]/: page.tsx
app/[airportId]/: page.tsx
app/actions-lib/: airports.ts  approach-db.ts  approach-matching.ts  approach-minimums.ts  approach-serialization.ts  approach-vertical-profile.ts  approaches.ts  constants.ts  geo.ts  missed-approach-climb.ts  scene-data.ts  types.ts
app/app-client/: DebugPanel.tsx  HeaderControls.tsx  HelpPanel.tsx  InfoPanel.tsx  LayersPanel.tsx  types.ts  (+3 more)
docs/: architecture-client-and-scene.md  architecture-data-and-actions.md  architecture-overview.md  data-sources.md  mrms-phase-methodology.md  mrms-rust-pipeline.md  rendering-approach-geometry.md  rendering-coordinate-system.md  rendering-nexrad.md  rendering-performance.md  rendering-surface-modes.md  rendering-weather-volume.md  ui-url-state-and-mobile.md  validation.md
lib/: airport-index.ts  db.ts  types.ts
rust-api/: Cargo.toml
rust-api/src/: main.rs  traffic.rs  weather.rs
scripts/: build-db.ts  dev-with-ddtrace.mjs  download-data.sh  start-with-rust-api.mjs
services/mrms-rs/: Cargo.toml
services/mrms-rs/src/: api.rs  config.rs  constants.rs  discovery.rs  grib.rs  http_client.rs  ingest.rs  main.rs  types.rs  utils.rs
src/: App.css  App.tsx  main.ts
types/: nexrad-level-2-data.d.ts
(+85 files in other folders)
