[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.6"
chrono = { version = "0.4", features = ["clock"] }
flate2 = "1.0"
futures = "0.3"
indexmap = "=2.0.2"
png = "0.17"
reqwest = { version = "=0.11.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal"] }
url = "=2.4.1"
zstd = "0.13"
