[package]
name = "approach-viz-mrms"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "1.8"
aws-sdk-sqs = "1.89"
axum = "0.8"
bincode = { version = "2.0", features = ["serde"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
flate2 = "1.1"
futures = "0.3"
grib = { version = "0.13.5", default-features = false, features = ["png-unpack-with-png-crate"] }
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "json", "stream", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "trace"] }
urlencoding = "2.1"
zstd = "0.13"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true
